# usb_stack

./: CMakeLists.txt  composite.c  composite.h  log.hpp  usb.cmake  usb.cpp  usb.hpp  usb_device_config.h  usb_device_descriptor.c  usb_device_descriptor.h  usb_device_init.c  usb_strings.h
bsp/usb/: usb.hpp  usb_device_config.h  usb_device_descriptor.h  virtual_com_demo.c  virtual_com_demo.h
bsp/usb/cdc/: virtual_com.c
cdc/: usb_device_cdc_acm.c  virtual_com.c  virtual_com.h
class/mtp/: usb_device_mtp.c
dcd/: usb_phydcd.c
device/: usb.h  usb_device.h  usb_device_class.c  usb_device_class.h  usb_string_descriptor.c  usb_string_descriptor.h
device/ehci/: usb_device_ehci.c  usb_device_ehci.h
module-services/service-mtp/: mtp.c  mtp_db.c  mtp_db.h  mtp_fs.h
module-usb/: composite.c  usb.cpp  usb.hpp
module-usb/cdc/: virtual_com.h
module-usb/mtp/libmtp/: mtp_responder.h
mtp/: mtp.c  mtp.h  mtp_db.c  mtp_db.cpp  mtp_db.hpp  mtp_fs.cpp  mtp_fs.h  usb_device_mtp.c  usb_device_mtp.h
mtp/libmtp/: mtp_dataset.c  mtp_file_system_adapter.c  mtp_file_system_adapter.cpp  mtp_file_system_adapter.h  mtp_object_handle.c  mtp_object_handle.h  mtp_operation.c  mtp_operation.h  mtp_responder.c  mtp_storage.c  mtp_storage.h  mtp_util.c
